# amplifier-experiment

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_RESTRUCTURE.md  QUICKSTART.md  README.md  book-analysis.json  bundle.md  clean-output.py  debug-table.py  enhanced_book_generator.py  final_book_generator.py  final_markdown_converter.py  final_perfect_markdown_converter.py  fixed-html-generator.py  fixed_book_generator.py  generate_book_with_diagrams.py  generate_parasol_book.py  generate_v5_agile_guide.py  improved_markdown_converter.py  perfect-final-html-generator.py  perfect-html-generator.py  setup-new-structure.sh  test-markdown-features.md  test-table.py  test_converter.py  test_diagram_direct.py  ultimate_book_generator.py  ultimate_markdown_converter.py
.claude/agents/: PARASOL_AGENTS_BOOK_CONFIG.md  PARASOL_AGENTS_VERSION_AWARE_UPDATE.md  axiomatic-design-advisor.md  parasol-book-architect.md  parasol-execution-documenter.md  parasol-phase1-context.md  parasol-phase2-value.md  parasol-phase3-capabilities.md  parasol-phase4-architecture.md  parasol-phase5-software.md  parasol-phase6-implementation.md  parasol-phase7-platform.md  parasol-version-manager.md
.claude/commands/: commit.md  integrate-consulting-parasol.md
.github/workflows/: amplifier-sync.yml
agents/: README.md
agents/development-agents/: modular-builder.md  zen-architect.md
agents/parasol-agents/: parasol-phase1-context.md
agents/synthesis-agents/: concept-extractor.md  insight-synthesizer.md
ai_context/: api-orchestration-pattern.md  legacy-integration-hub-pattern.md
ai_working/: parasol-capability-hierarchy-proposal.md
ai_working/ddd/: code_plan.md  docs_status.md  parasol-architecture-experiments.md  plan.md
ai_working/parasol-book-v5.4/: PARASOL_BOOK_V5.4.contract.md  PARASOL_BOOK_V5.4.impl_spec.md
ai_working/parasol_book_v54/: PARASOL_BOOK_V54.contract.md  PARASOL_BOOK_V54.impl_spec.md  plan.json  plan.md  session.json
amplifier-parasol-ddd/: README.md
amplifier-parasol-ddd/0-prime/: execute.md
amplifier-parasol-ddd/1-plan/: execute.md
amplifier-parasol-ddd/2-docs/: execute.md
amplifier-parasol-ddd/3-code-plan/: execute.md
amplifier-parasol-ddd/4-code/: execute.md
amplifier-parasol-ddd/5-finish/: execute.md
amplifier/parasol/: __init__.py  core.py  knowledge.py  memory.py  patterns.py  phases.py
amplifier/parasol_book_v54/: constants.py  content_generator.py  diagram_generator.py  models.py  reference_manager.py  structure_manager.py  utils.py
architectures/: WORKTREE_EXPERIMENTS.md  cleanup-worktrees.sh  compare.py  setup-worktrees.sh
config/: amplifier.config.yaml  parasol.config.yaml  workspace.json
docs/: getting-started.md
docs/parasol-task-management/: README.md
examples/: value-design-with-amplifier.md
framework/: parasol-development-framework.md
framework/knowledge-base/: knowledge-management-system.md
framework/phases/: phase-steps-detail.md
generated_books/: good-design-book-part1.html  parasol-v5-book.html
modules/: README.md
modules/book-to-pdf/: Makefile  README.md  pyproject.toml
modules/book-to-pdf/amplifier_module_book_to_pdf/: __init__.py  converters.py  main.py  styles.py
modules/book-to-pdf/amplifier_module_book_to_pdf/templates/: __init__.py
modules/book-updater/: README.md  pyproject.toml  update-rules.yaml
modules/book-updater/amplifier_module_book_updater/: __init__.py  analyzers.py  extractors.py  main.py  updaters.py  validators.py
modules/capability-mapper/: README.md  pyproject.toml
modules/capability-mapper/amplifier_module_capability_mapper/: __init__.py  main.py
modules/ccsdk-toolkit/: README.md  pyproject.toml
modules/ccsdk-toolkit/amplifier_module_ccsdk_toolkit/: __init__.py  main.py
modules/knowledge-synthesis/: README.md  pyproject.toml
modules/knowledge-synthesis/amplifier_module_knowledge_synthesis/: __init__.py  main.py
modules/parasol-cli/: README.md  pyproject.toml
modules/parasol-cli/amplifier_module_parasol_cli/: __init__.py  cli_commands.py  main.py  quality_gate.py  regeneration_engine.py
modules/parasol-cli/templates/adapters/: graphql-resolver.ts.hbs  repository.ts.hbs
modules/parasol-cli/templates/application/: use-case.ts.hbs
modules/parasol-cli/templates/domain/: entity.ts.hbs
modules/simple-pdf-generator/: generate_pdf.py
modules/value-exploration/: README.md  pyproject.toml
modules/value-exploration/amplifier_module_value_exploration/: __init__.py  main.py
outputs/4-architecture/: meiji-yasuda-architecture-analysis.md
outputs/5-software/: meiji-yasuda-software-design.md
outputs/6-implementation/: meiji-yasuda-implementation-quality.md
outputs/7-platform/: meiji-yasuda-platform-integration.md
parasol/: README.md  VERSION-GUIDE.md
parasol-v4-lite/: QUICK-START.md  README.md
parasol-v5/: PARASOL-V5-OVERVIEW.md  PHILOSOPHY.md  QUICK-START.md  README.md
parasol_book_generator/: __init__.py  converters.py  data_manager.py  diagram_config.py  diagram_engine.py  diagram_generator.py  diagram_renderer.py  generator.py
projects/: README.md
recipes/: v3-v4-unified-generation.md
scripts/: parasol_unified_generator.py
(+1030 files in other folders)
