[project]
name = "amplifier-module-ccsdk-toolkit"
version = "0.1.0"
description = "Claude Code SDK toolkit with defensive utilities for robust LLM integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core>=0.1.0",
    "claude-code-sdk>=0.0.20",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"