[project]
name = "amplifier-module-parasol-cli"
version = "0.1.0"
description = "Parasol DDD Framework CLI for Amplifier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core>=0.1.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"