[project]
name = "amplifier-module-value-exploration"
version = "0.1.0"
description = "Value exploration and discovery module for Parasol V5 value-driven design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
value-explore = "amplifier_module_value_exploration.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_value_exploration"]
